ddd-derive-tests/tests/entity/unit_struct_entity.rs
use ddd_derive::Entity;

#[derive(Entity)]
struct Unit;

fn main() {}